--- a/Cosmic/App/View/Home/registration.html
+++ b/Cosmic/App/View/Home/registration.html
@@ -205,6 +205,7 @@
                             </div>
                         </div>
                     </div>
+                     <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                     <p style="text-align: center; margin-top: 30px; padding-bottom: 30px;"><button type="submit" class="rounded-button blue plain submit-form default-prevent" id="registration-recaptcha">{{locale.register}}</button></p>
                 </form>
             </article>
