--- a/Cosmic/App/View/Password/reset.html
+++ b/Cosmic/App/View/Password/reset.html
@@ -18,6 +18,7 @@
                             <input type="hidden" name="token" value="{{token}}">
 
                         </div>
+                        <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                         <p class="submit-button"><button type="submit" class="rounded-button darkblue">{{locale.change_password}}</button></p>
                     </form>
                 </div>
