--- a/Cosmic/App/View/Password/claim.html
+++ b/Cosmic/App/View/Password/claim.html
@@ -16,6 +16,7 @@
                         <div class="row">
                             <input type="email" name="email" class="rounded-input darkblue-active" required>
                         </div>
+                        <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                         <p class="submit-button"><button type="submit" class="rounded-button darkblue submit-form default-prevent" id="password_claim-recaptcha">{{locale.send}}</button></p>
                     </form>
                 </div>
