--- a/Cosmic/App/View/Settings/email.html
+++ b/Cosmic/App/View/Settings/email.html
@@ -18,7 +18,7 @@
                     <div class="row">
                         <input type="password" name="current_password" class="rounded-input purple-active" placeholder="{{locale.fill_password}}" maxlength="32" autocomplete="off" required>
                     </div>
-
+                    <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                     <p class="submit-button"><button type="submit" class="rounded-button purple">{{locale.save}}</button></p>
                 </form>
             </article>
