--- a/Cosmic/App/View/Settings/namechange.html
+++ b/Cosmic/App/View/Settings/namechange.html
@@ -17,6 +17,7 @@
                     <input type="text" name="username" class="rounded-input purple-active newpin" id="username" placeholder="{{locale.fill_username}}" maxlength="15" autocomplete="off" required>
                 </div>
                 <div class="column-1">
+                    <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                     <p class="submit-button"><button type="submit" id="changeButton" class="rounded-button purple submit-password" disabled>{{locale.request}}</button></p>
                 </div>
             </div>
