--- a/Cosmic/App/View/Settings/password.html
+++ b/Cosmic/App/View/Settings/password.html
@@ -24,6 +24,7 @@
                         </div>
                     </div>
                     <div class="form-help">{{locale.help}}</div>
+                    <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                     <p class="submit-button"><button type="submit" class="rounded-button purple">{{locale.save}}</button></p>
                 </form>
             </article>
