--- a/Cosmic/App/View/Settings/verification.html
+++ b/Cosmic/App/View/Settings/verification.html
@@ -57,6 +57,7 @@
                             </p>
                         </div>
                     </div>
+                    <input type="hidden" name="csrftoken" value="{{csrf_token}}">
                     <p class="submit-button"><button type="submit" class="rounded-button purple">{{locale.save}}</button></p>
                 </form>
             </article>
