csrf added to javascript

--- a/Cosmic/App/View/Home/profile.html
+++ b/Cosmic/App/View/Home/profile.html
@@ -10,8 +10,10 @@
          <a href="#" class="changeBg button">Change background</a>
          <a href="#" class="addSticker button">Add sticker</a>
          <a href="#" class="addWidget button">Add widgets</a>
+         <input type="hidden" name="csrftoken" value="{{csrf_token}}" />
       </div>
       {% endif %}
+      
    </div>
 </header>
 <div id="searchOverlay" class="overlay">
