--- a/Cosmic/App/View/Admin/navbar.html
+++ b/Cosmic/App/View/Admin/navbar.html
@@ -24,6 +24,12 @@
               <i class="kt-menu__link-icon flaticon-technology-2"></i><span class="kt-menu__link-text">Remote control</span></a>
           </li>
           {% endif %}
+          {% if 'housekeeping_remote_control' in permissions or 'housekeeping_tools' in permissions %}
+          <li class="kt-menu__item ajaxLoading" aria-haspopup="true" >
+              <a  href="/housekeeping/catalog/manage" class="kt-menu__link ">
+              <i class="kt-menu__link-icon flaticon-technology-2"></i><span class="kt-menu__link-text">Catalog control</span></a>
+          </li>
+          {% endif %}
           {% if 'housekeeping_room_control' in permissions or 'housekeeping_tools' in permissions %}
           <li class="kt-menu__item ajaxLoading" aria-haspopup="true" >
               <a  href="/housekeeping/rooms/manage" class="kt-menu__link ">
